--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -988,7 +988,7 @@ ol {
   height: 100vh;
   width: 100vw;
   background-color: black;
-  opacity: 80%;
+  opacity: 80% !important;
   top: 0;
   z-index: 1000;
 }
