--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -987,7 +987,7 @@ ol {
   height: 100vh;
   width: 100vw;
   background-color: black;
-  opacity: 80% !important;
+  opacity: 0.85 !important;
   top: 0;
   z-index: 1000;
 }
