--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1098,7 +1098,7 @@ ol {
 
 .me p {
   font-family: "NB International Pro";
-  font-size: 1.25rem;
+  font-size: 1.75rem;
   color: black;
   letter-spacing: 2%;
 }
@@ -1150,7 +1150,7 @@ ol {
 
 .me-button p {
   font-family: "NB International Mono";
-  font-size: 0.8rem;
+  font-size: 1.75rem;
   text-transform: uppercase;
   color: white;
 }
@@ -1177,6 +1177,7 @@ ol {
   }
   .me-right {
     padding: 3.75rem;
+    padding-top: 0;
   }
 
   .me-h3-mobile {
