--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -858,7 +858,7 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 18rem;
+  padding-bottom: 4rem;
 }
 
 .shop-content {
@@ -878,6 +878,10 @@ ol {
 .shop-item img:hover {
   opacity: 0.6;
   transition: 0.3s ease-in-out;
+}
+
+.carrot {
+  margin-top: 4rem;
 }
 
 .carousel .control-dots .dot {
@@ -983,6 +987,12 @@ ol {
     display: flex;
     align-self: flex-start;
     width: 85%;
+  }
+  .shop-banner {
+    padding-bottom: 18rem;
+  }
+  .carrot {
+    display: none;
   }
 }
 
