--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -976,9 +976,18 @@ ol {
   justify-self: center;
 }
 
-.line {
+.line-l {
   height: 2px;
   width: 20px;
+  background-image: url("../images/shop/line.svg");
+  background-size: cover;
+  position: absolute;
+  transform: translateY(-1.4rem) translateX(-0.7rem) rotate(-45deg);
+}
+
+.line-xl {
+  height: 2px;
+  width: 30px;
   background-image: url("../images/shop/line.svg");
   background-size: cover;
   position: absolute;
@@ -997,13 +1006,21 @@ ol {
     align-self: flex-start;
     width: 85%;
   }
-  .line {
+  .line-l {
     height: 2px;
     width: 20px;
     background-image: url("../images/shop/line.svg");
     background-size: cover;
     position: absolute;
     transform: translateY(-1.4rem) translateX(-0.8rem) rotate(-45deg);
+  }
+  .line-xl {
+    height: 2px;
+    width: 20px;
+    background-image: url("../images/shop/line.svg");
+    background-size: cover;
+    position: absolute;
+    transform: translateY(-1.4rem) translateX(-0.65rem) rotate(-45deg);
   }
   .shop-gallery-title {
     color: #fff;
