--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -28,9 +28,25 @@ html {
   padding: 0 $spacer2 0 $spacer2 !important;
 }
 
+.eventsOuterContainer {
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+  padding: 0 !important;
+}
+
 .innerContainer {
   @media screen and (min-width: $md) {
     padding: 0 $spacer3 0 $spacer3;
+  }
+}
+
+.eventsInnerContainer {
+  padding: 0 $spacer2;
+
+  @media screen and (min-width: $md) {
+    padding: 0 $spacer2+$spacer3 0 $spacer2+$spacer3;
   }
 }
 
@@ -491,6 +507,56 @@ p.partner-with-us {
   transform: translateX(0%);
   transition: 0.3s ease-out;
   visibility: visible;
+}
+
+.close-accordion {
+  display: none;
+}
+.open-accordion {
+  display: block;
+}
+
+.hide-link {
+  display: none;
+}
+
+.show-link {
+  margin-right: $base;
+}
+
+#acc-arrow, #acc-arrow2, #acc-arrow3 {
+  cursor: pointer;
+  transform: rotate(0deg);
+}
+
+.close-arrow {
+  transform: rotate(180deg) !important;
+}
+
+.eventsInnerContainer button {
+  padding: 1rem 1.5rem;
+  border-radius: 40px;
+  border: 1.5px solid #191919;
+  cursor: pointer;
+}
+
+.normal {
+  color: #191919;
+  background-color: white;
+}
+
+.clicked {
+  color: white;
+  background-color: #191919;
+}
+
+.carousel .slide {
+  background-color: #191919 !important;
+  text-align: left !important;
+}
+
+.carousel img {
+  pointer-events: all;
 }
 
 .panel {
