--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -514,6 +514,10 @@ button h4 {
   vertical-align: middle;
 }
 
+#event-links p {
+  font-family: "NB International Mono";
+}
+
 .close-accordion {
   max-height: 0;
   opacity: 0;
