--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -999,6 +999,16 @@ ol {
   .grey_table {
     background-color: #282828;
   }
+  p {
+    
+  }
+  .title {
+    margin: 1rem 0 4rem;
+  }
+  .price {
+      font-family: 'NB International Mono';
+      margin: 4rem 0 1rem;
+    }
 }
 
 /**************** SHOP ***********************/
