--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -637,11 +637,12 @@ button.control-arrow {
 }
 
 .panel {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+  height: 100vh;
   background-color: black;
   color: #eee;
   overflow: auto;
