--- a/src/components/shop/ShopModal/ShopModal.scss
+++ b/src/components/shop/ShopModal/ShopModal.scss
@@ -19,7 +19,7 @@
   align-self: flex-end;
   border: none;
   background-color: unset;
-  background-image: url("https://placehold.co/16x16");
+  background-image: url("https://placehold.co/16x16?text=X");
   background-repeat: no-repeat;
   background-position: center right;
   cursor: pointer;
@@ -95,7 +95,7 @@
 .shop-modal_photos {
   position: sticky;
   top: 0;
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 700px) {
     position: static;
   }
 }
