--- a/src/components/shop/ShopModal/ShopModal.scss
+++ b/src/components/shop/ShopModal/ShopModal.scss
@@ -27,7 +27,7 @@
 
 .shop-modal_box-wrapper {
   position: absolute;
-  inset: 0;
+  inset: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,6 +40,7 @@
   max-width: 1200px;
   background-color: white;
   pointer-events: all;
+  height: 100%;
   padding: 50px;
   display: block;
   max-height: 600px;
