add max width to thumbnails

--- a/src/components/shop/ShopPhotoGallery/ShopPhotoGallery.scss
+++ b/src/components/shop/ShopPhotoGallery/ShopPhotoGallery.scss
@@ -64,6 +64,8 @@
   position: relative;
   width: 10vw;
   height: 10vw;
+  max-width: 140px;
+  max-height: 140px;
   overflow: hidden;
   background: none;
   padding: 0;
