--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1033,6 +1033,7 @@ ol {
   justify-content: center;
   align-items: center;
   padding-bottom: 4rem;
+  height: 50vh;
 }
 
 .shop-content {
@@ -1105,16 +1106,30 @@ ol {
   margin: auto 11rem;
 }
 
-.shop-background {
+/*.shop-background {
   position: absolute;
   z-index: -1;
-  top: 0;
-  left: 0;
+  top: -400;
+  left: -1000;
   object-fit: cover;
-  // background-size: cover;
+  background-size: cover;
   // height: 100vh;
   width: 100%;
   overflow: hidden;
+}
+*/
+.shop-background {
+  position: absolute;
+  z-index: -1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  object-fit: cover;
+  background-size: cover;
+  width: 100%;
+  transform: translateY(-200px);
+  
 }
 
 .shop-item {
