--- a/src/components/shop/ShopModal/ShopModal.scss
+++ b/src/components/shop/ShopModal/ShopModal.scss
@@ -118,3 +118,19 @@
     }
   }
 }
+
+.shop-modal-price-desktop {
+  display: block;
+
+  @media screen and (max-width: 600px) {
+    display: none;
+  }
+}
+
+.shop-modal-price-mobile {
+  display: none;
+
+  @media screen and (max-width: 600px) {
+    display: block;
+  }
+}
