--- a/src/components/shop/ShopPhotoGallery/ShopPhotoGallery.scss
+++ b/src/components/shop/ShopPhotoGallery/ShopPhotoGallery.scss
@@ -17,12 +17,20 @@
   border: none;
   cursor: pointer;
   &.left {
-    left: 16px;
-    background-image: url("https://placehold.co/40x40?text=<-");
+    left: 0;
+    background-image: url('../../../images/shop/downchevron.svg');
+    background-size: contain;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    transform: rotate(90deg);
   }
   &.right {
-    right: 16px;
-    background-image: url("https://placehold.co/40x40?text=->");
+    right: 0;
+    background-image: url('../../../images/shop/downchevron.svg');
+    background-size: contain;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    transform: rotate(-90deg);
   }
   @media screen and (max-width: 480px) {
     display: none;
@@ -48,6 +56,22 @@
     object-fit: cover;
     position: absolute;
     inset: 0;
+  }
+}
+
+.shop-photo-gallery_thumbnail-container {
+  max-height: 600px;
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar{
+    display: none;
+  }
+
+  @media screen and (max-width: 600px) {
+    max-height: 400px;
+  }
+  @media screen and (max-width: 480px) {
+    max-height: 300px;
   }
 }
 
